--- a/asej_main.tex
+++ b/asej_main.tex
@@ -93,7 +93,7 @@
 \author{Xin Xia$^{\ast}$$^\dag$\thanks{$^{\ast}$This work was done while the author was visiting Singapore Management University.}       \and
         Liang Gong$^\dag$\thanks{$^\dag$The two authors contribute equally for this work.} \and
         Tien-Duy~B.~Le \and
-        David Lo \and
+        David Lo \and \\
         Lingxiao Jiang \and
         Hongyu~Zhang
 }
